fixing z-index

--- a/components/SidebarMobile/SideBarMobileCard/sideBarMobileCard.module.scss
+++ b/components/SidebarMobile/SideBarMobileCard/sideBarMobileCard.module.scss
@@ -38,7 +38,7 @@
 
   .previousQuestions {
     position: absolute;
-    z-index: 10;
+    z-index: 20;
     width: 700%;
     margin-left: 900%;
     display: flex;
